--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/img/infinity.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="/css/login.css"/>
     <link rel="stylesheet" href="/css/alert.css"/>
-
-    <title>Modern Login Page | AsmrProg</title>
+    <title>Infinity</title>
 </head>
 
 <body>
@@ -62,15 +62,7 @@
             </div>
         </div>
     </div>
-    
-<!-- alert -->
-    <!-- <button id="success" style="display: none;">Success</button>
-    <button id="error" style="display: none;">Error</button>
-    <button id="warning" style="display: none;">Warning</button>
-    <button id="info" style="display: none;">Info</button> -->
-
     <script src="/js/login.js"></script>
     <script src="/js/alert.js"></script>
-
 </body>
 </html>
