--- a/src/public/css/alert.css
+++ b/src/public/css/alert.css
@@ -1,101 +1,140 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-    body{
-        font-family: 'Poppins', sans-serif;
-        margin: 0;
-        min-height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #1C1D22;
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1C1D22;
+}
+button{
+    padding: 10px;
+}
+.notifications{
+    position: fixed;
+    z-index: 1000;
+    top: 30px;
+    right: 20px;
+}
+.toast{
+    position: relative;
+    padding: 10px;
+    color: #fff;
+    margin-bottom: 10px;
+    width: 400px;
+    display: grid;
+    grid-template-columns: 70px 1fr 70px;
+    border-radius: 5px;
+    --color: #0abf30;
+    background-image: 
+        linear-gradient(
+            to right, #0abf3055, #22242f 30%
+        ); 
+    animation: show 0.3s ease 1 forwards  
+}
+.toast i{
+    color: var(--color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: x-large;
+}
+.toast .title{
+    font-size: x-large;
+    font-weight: bold;
+}
+.toast span, .toast i:nth-child(3){
+    color: #fff;
+    opacity: 0.6;
+}
+@keyframes show{
+    0%{
+        transform: translateX(100%);
     }
-    button{
-        padding: 10px;
+    40%{
+        transform: translateX(-5%);
     }
+    80%{
+        transform: translateX(0%);
+    }
+    100%{
+        transform: translateX(-10%);
+    }
+}
+.toast::before{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: var(--color);
+    width: 100%;
+    height: 3px;
+    content: '';
+    box-shadow: 0 0 10px var(--color);
+    animation: timeOut 5s linear 1 forwards
+}
+@keyframes timeOut{
+    to{
+        width: 0;
+    }
+}
+.toast.error{
+    --color: #f24d4c;
+    background-image: 
+        linear-gradient(
+            to right, #f24d4c55, #22242F 30%
+        );
+}
+.toast.warning{
+    --color: #e9bd0c;
+    background-image: 
+        linear-gradient(
+            to right, #e9bd0c55, #22242F 30%
+        );
+}
+.toast.info{
+    --color: #3498db;
+    background-image: 
+        linear-gradient(
+            to right, #3498db55, #22242F 30%
+        );
+}
+
+@media screen and (max-width: 850px) {
     .notifications{
-        position: fixed;
-        z-index: 1000;
-        top: 30px;
-        right: 20px;
+        right: 0px;
     }
     .toast{
-        position: relative;
-        padding: 10px;
-        color: #fff;
-        margin-bottom: 10px;
-        width: 400px;
-        display: grid;
-        grid-template-columns: 70px 1fr 70px;
-        border-radius: 5px;
-        --color: #0abf30;
-        background-image: 
-            linear-gradient(
-                to right, #0abf3055, #22242f 30%
-            ); 
-        animation: show 0.3s ease 1 forwards  
+        width: 300px;
+        padding: 5px;
+        line-height: 1.25;
     }
-    .toast i{
-        color: var(--color);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: x-large;
+    /* .toast i{
+        font-size: 5px;
+    } */
+    .content_text{
+        font-size: 12px
     }
     .toast .title{
-        font-size: x-large;
-        font-weight: bold;
+        font-size: 15px;
     }
-    .toast span, .toast i:nth-child(3){
-        color: #fff;
-        opacity: 0.6;
+}
+@media screen and (max-width: 530px) {
+    .notifications{
+        right: -5px;
     }
-    @keyframes show{
-        0%{
-            transform: translateX(100%);
-        }
-        40%{
-            transform: translateX(-5%);
-        }
-        80%{
-            transform: translateX(0%);
-        }
-        100%{
-            transform: translateX(-10%);
-        }
+    .toast{
+        width: 220px;
+        padding: 5px;
+        line-height: 1;
     }
-    .toast::before{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        background-color: var(--color);
-        width: 100%;
-        height: 3px;
-        content: '';
-        box-shadow: 0 0 10px var(--color);
-        animation: timeOut 5s linear 1 forwards
+    /* .toast i{
+        font-size: 5px;
+    } */
+    .content_text{
+        font-size: 10px
     }
-    @keyframes timeOut{
-        to{
-            width: 0;
-        }
+    .toast .title{
+        font-size: 12px;
     }
-    .toast.error{
-        --color: #f24d4c;
-        background-image: 
-            linear-gradient(
-                to right, #f24d4c55, #22242F 30%
-            );
-    }
-    .toast.warning{
-        --color: #e9bd0c;
-        background-image: 
-            linear-gradient(
-                to right, #e9bd0c55, #22242F 30%
-            );
-    }
-    .toast.info{
-        --color: #3498db;
-        background-image: 
-            linear-gradient(
-                to right, #3498db55, #22242F 30%
-            );
-    }
+}
