--- a/src/views/login_main.ejs
+++ b/src/views/login_main.ejs
@@ -19,7 +19,7 @@
                         <form autocomplete="off" class="sign-in-form">
                             <a href="/" style="text-decoration: none; width: 100px;">
                                 <div class="logo">
-                                    <img src="./img/infinity.png" alt="infinity" style="margin-bottom: 7px" />
+                                    <img src="/./img/infinity.png" alt="infinity" style="margin-bottom: 7px" />
                                     <h4>infinity</h4>
                                 </div>
                             </a>
@@ -51,7 +51,7 @@
                         <form autocomplete="off" class="sign-up-form">
                             <a href="/" style="text-decoration: none; width: 100px;">
                                 <div class="logo">
-                                    <img src="./img/infinity.png" alt="infinity" style="margin-bottom: 7px" />
+                                    <img src="/./img/infinity.png" alt="infinity" style="margin-bottom: 7px" />
                                     <h4>infinity</h4>
                                 </div>
                             </a>
@@ -90,7 +90,7 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="images-wrapper">
-                                    <img src="./img/img_login/img1.png" class="image img-1 show" alt="" />
+                                    <img src="/./img/img_login/img1.png" class="image img-1 show" alt="" />
                                 </div>
                                 <div class="text-slider">
                                     <div class="text-wrap">
@@ -114,7 +114,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="images-wrapper">
-                                    <img src="./img/img_login/img3.png" class="image img-1 show" alt="" />
+                                    <img src="/./img/img_login/img3.png" class="image img-1 show" alt="" />
                                 </div>
                                 <div class="text-slider">
                                     <div class="text-wrap">
