--- a/src/public/css/translate.css
+++ b/src/public/css/translate.css
@@ -353,17 +353,27 @@ body{
 
 /*********************************************************************/
 .sidebar {
-  height: 60%;
+  /* height: 70%; */
   width: 0;
   position: absolute;
-  top: calc(var(--header-height) + 30px);
+  /* top: calc(var(--header-height) + 1.5rem); */
   right: 0;
-  border-radius: 10px;
   background-color: #f1f1f1;
   overflow-x: hidden;
   transition: 0.5s;
-  padding: 10px 0;
+  padding: 30px 0 20px;
   z-index: 15; /* Set a higher z-index to ensure the sidebar appears above other elements */
+}
+.sidebar_header{
+  display: flex;
+  justify-content: space-between;
+  white-space: nowrap;
+  align-items: center;
+}
+.close_sidebar{
+  cursor: pointer;
+  margin-right: 30px;
+  font-size: 35px;
 }
 
 .sidebar a {
@@ -389,7 +399,7 @@ body{
   margin: var(--margin-content) auto;
 }
 .btn_group{
-  padding-left: 30px;
+  padding-left: 20px;
   display: flex;
 }
 .box{
@@ -397,8 +407,10 @@ body{
 }
 .sidebar_title{
   color: #272525;
+  font-size: 35px;
   white-space: nowrap;
   margin-left: 10px;
+  margin-right: 100px;
 }
 
 .toggle-btn {
@@ -437,7 +449,6 @@ body{
 /*************************************/
 /*****CSS cho menu item******/
 .product {
-  background-color: #4e5d72;
   border-radius: 5px;
   position: relative;
   margin: 10px auto;
@@ -448,16 +459,18 @@ body{
 
 .product h3 {
   margin-top: 0;
-  color: yellow;
+  font-weight: 800;
+  color: #4255FF;
 }
 
 .product p {
   margin: 10px 0;
-  color: #f3f9f9;
+  font-size: 20px;
+  color: black;
 }
 
 .product .price {
-  color: #c3c3c3;
+  color: #727272;
 }
 
 .text-box{
@@ -489,7 +502,7 @@ body{
   box-shadow: 0 .75rem 1.5rem 0 #282e3e14;
 }
 .text-input .to-text{
-  background-color: #e2dfdf;
+  background-color: #ecebeb;
 }
 .text-input textarea{
   height: 300px;
